--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,12 @@
     </section>
     <!-- /EMAIL -->
 
+    <!-- LOADING -->
+    <section>
+      <div style="background-color: transparent;" class="se-pre-con"></div>
+    </section>
+    <!-- /LOADING-->
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/7.13.1/firebase-app.js"></script>
