LOADER: Display: none;

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
     <!-- LOADING -->
     <section>
-      <div style="background-color: transparent;" class="se-pre-con"></div>
+      <div style="background-color: transparent; display:none;" class="se-pre-con"></div>
     </section>
     <!-- /LOADING-->
 
