--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
 
 <body>
   <!-- MAIN -->
-  <section id="main">
+  <section id="main" style="display: none;">
     <h3>Thousands of Doctors and Nurses are giving their life today for you and me.</h2>
       <h2>Let's give them a</h2>
       <a class="button" id="clap_button">
         CLAP!
         <img class="clapImg" src="./images/clap.svg" />
       </a>
-      <p>Today's number of claps: XXXX</p>
+      <p>Today's number of claps: <span id="daily_claps"></span></p>
     </section>
     <!-- /MAIN -->
 
@@ -30,22 +30,22 @@
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
       <a class="button">Share the CLAP!</a>
-      <a class="button">More ways to HELP</a>
+      <a class="button js-link" href="#help">More ways to HELP</a>
     </section>
     <!-- /RESULTS -->
 
     <!-- HELP -->
     <section id="help" style="display: none;">
       <h3>More ways in which you can help!</h3>
-      <a class="button">I want to send an ecouragement message to the Doctors and Nurses in my area.</a>
-      <a class="button">I want to donate resources to the cause.</a>
-      <a class="button">I want to help the ClapHelp team.</a>
-      <a class="button">Share the Clap!</a>
+      <a class="button js-link" href="#contact">I want to send an ecouragement message to the Doctors and Nurses in my area.</a>
+      <a class="button js-link" href="#contact">I want to donate resources to the cause.</a>
+      <a class="button js-link" href="#contact">I want to help the ClapHelp team.</a>
+      <a class="button js-link" href="#contact">Share the Clap!</a>
     </section>
     <!-- /HELP -->
 
     <!-- EMAIL -->
-    <section id="email" style="display: none;">
+    <section id="contact" style="display: none;">
       <h3>Thank you for wanting to help with XXXX!</h3>
       <form>
         <label for=email>Leave us your email and we'll send you the information on how to help.</label>
@@ -57,12 +57,12 @@
     <!-- /EMAIL -->
 
     <!-- LOADING -->
-    <section>
-      <div style="background-color: transparent; display:none;" class="se-pre-con"></div>
+    <section id="loader">
+      <div style="background-color: transparent;" class="se-pre-con"></div>
     </section>
     <!-- /LOADING-->
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/7.13.1/firebase-app.js"></script>
 
