Changes in Copy in third view and change in the button of "Share the CLAP" in third view.

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
     <!-- HELP -->
     <section id="help" style="display: none;">
       <h3>More ways in which you can help!</h3>
-      <a class="button js-link" href="#contact">I want to send an ecouragement message to the Doctors and Nurses in my area.</a>
-      <a class="button js-link" href="#contact">I want to donate resources to the cause.</a>
-      <a class="button js-link" href="#contact">I want to help the ClapHelp team.</a>
-      <a class="button js-link" href="#contact">Share the Clap!</a>
+      <a class="button js-link" href="#contact">Send an ecouragement message to the Doctors and Nurses in my area.</a>
+      <a class="button js-link" href="#contact">Donate resources to the cause.</a>
+      <a class="button js-link" href="#contact">Help/Join the ClapHelp team.</a>
+      <a style="opacity: 80%; margin: 30px; color: #919191;" class="button js-link" href="#contact">Share the Clap!</a>
     </section>
     <!-- /HELP -->
 
