--- a/public/index.html
+++ b/public/index.html
@@ -35,25 +35,26 @@
     <!-- /RESULTS -->
 
     <!-- HELP -->
-    <section id="help" style="display: none;">
-      <h3>More ways in which you can help!</h3>
-      <a class="button js-link" href="#contact">I want to send an ecouragement message to the Doctors and Nurses in my area.</a>
-      <a class="button js-link" href="#contact">I want to donate resources to the cause.</a>
-      <a class="button js-link" href="#contact">I want to help the ClapHelp team.</a>
-      <a class="button js-link" href="#contact">Share the Clap!</a>
-    </section>
-    <!-- /HELP -->
+      <section id="help" style="display: none;">
+        <h3>More ways in which you can help!</h3>
+        <a class="button js-link" href="#contact" data-value="0">I want to send an ecouragement message to the Doctors and Nurses in my area.</a>
+        <a class="button js-link" href="#contact" data-value="1">I want to donate resources to the cause.</a>
+        <a class="button js-link" href="#contact" data-value="2">I want to help the ClapHelp team.</a>
+        <a class="button">Share the Clap!</a>
+      </section>
+      <!-- /HELP -->
 
-    <!-- EMAIL -->
-    <section id="contact" style="display: none;">
-      <h3>Thank you for wanting to help with XXXX!</h3>
-      <form>
-        <label for=email>Leave us your email and we'll send you the information on how to help.</label>
-        <br>
-        <input type=email id=email name=email>
-        <input type=submit id=submitButton name=submit>
-      </form>
-    </section>
+      <!-- EMAIL -->
+      <section id="contact" style="display: none;">
+        <form id="contact-form">
+          <h3>Thank you for wanting to help with XXXX!</h3>
+          <label for="email">Leave us your email and we'll send you the information on how to help.</label>
+          <br>
+          <input type="hidden" id="help-type" name="type">
+          <input type="email" id="email" name="email">
+          <input type="submit" id="submitButton" name="submit">
+        </form>
+      </section>
     <!-- /EMAIL -->
 
     <!-- LOADING -->
