Changes in the style of buttons to fit the propper width when in responsive. Addition of footer.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link href="css/index.css" type="text/css" rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
   <!-- MAIN -->
   <section id="main" style="display: none;">
     <h3>Thousands of Doctors and Nurses are giving their life today for you and me.</h2>
@@ -29,17 +29,17 @@
         <img class="flagDivImg" src="./images/world.png"/>
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
-      <a class="button">Share the CLAP!</a>
-      <a class="button js-link" href="#help">More ways to HELP</a>
+      <a class="button" style="width: 100%;">Share the CLAP!</a>
+      <a class="button js-link" href="#help" style="width: 100%;">More ways to HELP</a>
     </section>
     <!-- /RESULTS -->
 
     <!-- HELP -->
     <section id="help" style="display: none;">
       <h3>More ways in which you can help!</h3>
-      <a class="button js-link" href="#contact">Send an ecouragement message to the Doctors and Nurses in my area.</a>
-      <a class="button js-link" href="#contact">Donate resources to the cause.</a>
-      <a class="button js-link" href="#contact">Help/Join the ClapHelp team.</a>
+      <a class="button js-link" href="#contact" style="width: 100%;">Send an ecouragement message to the Doctors and Nurses in my area.</a>
+      <a class="button js-link" href="#contact" style="width: 100%;">Donate resources to the cause.</a>
+      <a class="button js-link" href="#contact" style="width: 100%;">Help/Join the ClapHelp team.</a>
       <a style="opacity: 80%; margin: 30px; color: #919191;" class="button js-link" href="#contact">Share the Clap!</a>
     </section>
     <!-- /HELP -->
@@ -55,6 +55,12 @@
       </form>
     </section>
     <!-- /EMAIL -->
+
+    <!-- FOOTER -->
+    <footer>
+      <p>m@claphelp.life -> CREAR EMAIL</p>
+    </footer>
+    <!-- /FOOTER-->
 
     <!-- LOADING -->
     <section id="loader">
