i) Commit comments resolved. ii) Last Thank You View done. iii) First attempt to changes in the responsive issue made.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link href="css/index.css" type="text/css" rel="stylesheet">
 </head>
 
-<body class="body">
+<body>
   <!-- MAIN -->
   <section id="main" style="display: none;">
     <h3>Thousands of Doctors and Nurses are giving their life today for you and me.</h2>
@@ -29,17 +29,17 @@
         <img class="flagDivImg" src="./images/world.png"/>
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
-      <a class="button" style="width: 100%;">Share the CLAP!</a>
-      <a class="button js-link" href="#help" style="width: 100%;">More ways to HELP</a>
+      <a class="button">Share the CLAP!</a>
+      <a class="button js-link" href="#help">More ways to HELP</a>
     </section>
     <!-- /RESULTS -->
 
     <!-- HELP -->
     <section id="help" style="display: none;">
       <h3>More ways in which you can help!</h3>
-      <a class="button js-link" href="#contact" style="width: 100%;">Send an ecouragement message to the Doctors and Nurses in my area.</a>
-      <a class="button js-link" href="#contact" style="width: 100%;">Donate resources to the cause.</a>
-      <a class="button js-link" href="#contact" style="width: 100%;">Help/Join the ClapHelp team.</a>
+      <a class="button fullWidth js-link" href="#contact">Send an ecouragement message to the Doctors and Nurses in my area.</a>
+      <a class="button fullWidth js-link" href="#contact">Donate resources to the cause.</a>
+      <a class="button fullWidth js-link" href="#contact">Help/Join the ClapHelp team.</a>
       <a style="opacity: 80%; margin: 30px; color: #919191;" class="button js-link" href="#contact">Share the Clap!</a>
     </section>
     <!-- /HELP -->
@@ -51,14 +51,22 @@
         <label for=email>Leave us your email and we'll send you the information on how to help.</label>
         <br>
         <input type=email id=email name=email>
-        <input type=submit id=submitButton name=submit>
+        <input type=submit id=submitButton name=submit class="js-link" href="#thanks">
       </form>
     </section>
     <!-- /EMAIL -->
+    
+    <!-- THANK YOU-->
+    <section id="thanks" style="display: none;">
+      <h3>Thank You! <br>We will contact you soon!</h3>
+      <p>In the meantime, why not share the gratitude?</p>
+      <a class="button">Share the CLAP!</a>
+    </section>
+    <!-- /THANK YOU-->
 
     <!-- FOOTER -->
     <footer>
-      <p>m@claphelp.life -> CREAR EMAIL</p>
+      <p>m@claphelp.life</p>
     </footer>
     <!-- /FOOTER-->
 
