Share icon added to button + added opacity to icon to match colour pallet.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <h2>Let's give them a</h2>
       <a class="button" id="clap_button">
         CLAP!
-        <img class="clapImg" src="./images/clap.svg" />
+        <img class="clapImg icon" src="./images/clap.svg" />
       </a>
       <p>Today's number of claps: <span id="daily_claps"></span></p>
     </section>
@@ -29,7 +29,10 @@
         <img class="flagDivImg" src="./images/world.png"/>
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
-      <a class="button">Share the CLAP!</a>
+      <a class="button">
+        <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
+        Share the CLAP!
+      </a>
       <a class="button js-link" href="#help">More ways to HELP</a>
     </section>
     <!-- /RESULTS -->
@@ -40,7 +43,10 @@
       <a class="button fullWidth js-link" href="#contact">Send an ecouragement message to the Doctors and Nurses in my area.</a>
       <a class="button fullWidth js-link" href="#contact">Donate resources to the cause.</a>
       <a class="button fullWidth js-link" href="#contact">Help/Join the ClapHelp team.</a>
-      <a style="opacity: 80%; margin: 30px; color: #919191;" class="button js-link" href="#contact">Share the Clap!</a>
+      <a style="opacity: 80%; margin: 30px; color: #919191;" class="button js-link" href="#contact">
+        <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
+        Share the CLAP!
+      </a>
     </section>
     <!-- /HELP -->
 
@@ -60,7 +66,10 @@
     <section id="thanks" style="display: none;">
       <h3>Thank You! <br>We will contact you soon!</h3>
       <p>In the meantime, why not share the gratitude?</p>
-      <a class="button">Share the CLAP!</a>
+      <a class="button">
+        <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
+        Share the CLAP!
+      </a>
     </section>
     <!-- /THANK YOU-->
 
