First attempt to creating a share button with the browsers native share + change in style and copy

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
       <a class="button">
-        <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
+        <img class="clapImg icon share-button" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
         Share the CLAP!
       </a>
       <a class="button js-link" href="#help">More ways to HELP</a>
@@ -57,14 +57,14 @@
         <label for=email>Leave us your email and we'll send you the information on how to help.</label>
         <br>
         <input type=email id=email name=email>
-        <input type=submit id=submitButton name=submit class="js-link" href="#thanks">
+        <input type=submit id=submitButton name=submit class=" button js-link" href="#thanks">
       </form>
     </section>
     <!-- /EMAIL -->
     
     <!-- THANK YOU-->
     <section id="thanks" style="display: none;">
-      <h3>Thank You! <br>We will contact you soon!</h3>
+      <h3>Thank You, <br>We will contact you soon!</h3>
       <p>In the meantime, why not share the gratitude?</p>
       <a class="button">
         <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
