Eliminated: Attempts to Share and to Responsive

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
       <a class="button">
-        <img class="clapImg icon share-button" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
+        <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
         Share the CLAP!
       </a>
       <a class="button js-link" href="#help">More ways to HELP</a>
