--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <img class="flagDivImg" src="./images/world.png"/>
         <h3><span id="global_claps"></span> Worldwide</h3>
       </div>
-      <a class="button">
+      <a class="button share-btn" onclick="copyLink()">
         <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
         Share the CLAP!
       </a>
@@ -58,8 +58,8 @@
       <form>
         <label for=email>Leave us your email and we'll send you the information on how to help.</label>
         <br>
-        <input type=email id=email name=email placeholder="example@example.com">
-        <input type=submit id=submitButton name=submit class=" button js-link" href="#thanks">
+        <input type="email" id="email" name="email" placeholder="example@example.com">
+        <input type="submit" id="submitButton" name="submit" class="button js-link" href="#thanks">
       </form>
     </section>
 
