--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,22 @@
 <head>
   <link href="css/index.css" type="text/css" rel="stylesheet">
   <meta name="viewport" content="width=device-width" />
+  <title>ClapHelp - Show support for those fighting COVID-19</title>
+  <meta name="description" content="Thousands of Doctors and Nurses are giving their life today for you and me. Let's give them a clap!">
+  <meta property="og:title" content="ClapHelp">
+  <meta property="og:description" content="Show support for those fighting COVID-19. Thousands of Doctors and Nurses are giving their life today for you and me. Let's give them a clap!">
+  <meta property="og:image" content="">
+  <meta property="og:url" content="https://claphelp.life">
+  <meta name="twitter:title" content="ClapHelp">
+  <meta property="twitter:description" content="Show support for those fighting COVID-19. Thousands of Doctors and Nurses are giving their life today for you and me. Let's give them a clap!">
+  <meta property="twitter:image" content="">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
