Link to Email + Logo Image added
[WIP] Logo Image added but with size and position issues. Link to Email done.

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,8 @@
 
     <!-- FOOTER -->
     <footer>
-      <p>m@claphelp.life</p>
+      <img src="images/og_image.png" />
+      <p><a href="mailto:m@claphelp.life">m@claphelp.life</a></p>
     </footer>
     <!-- /FOOTER-->
 
