feature: make counters animate

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         CLAP!
         <img class="clapImg icon" src="./images/clap.svg" />
       </a>
-      <p>Today's number of claps: <span id="daily_claps"></span></p>
+      <p>Today's number of claps: <span id="daily_claps" class="counter"></span></p>
     </section>
     <!-- /MAIN -->
 
@@ -40,11 +40,11 @@
       <h3>Total Number of Claps:</h3>
       <div class="flagDiv">
         <img class="flagDivImg country_flag" src="./images/Flag_of_Colombia.svg"/>
-        <h3><span id="country_claps"></span> in <span id="country_name"></span></h3>
+        <h3><span id="country_claps" class="counter"></span> in <span id="country_name"></span></h3>
       </div>
       <div class="flagDiv">
         <img class="flagDivImg" src="./images/world.png"/>
-        <h3><span id="global_claps"></span> Worldwide</h3>
+        <h3><span id="global_claps" class="counter"></span> Worldwide</h3>
       </div>
       <a class="button share-btn">
         <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
