Header (Logo) and Footer edited + Toaster edition.
Added the header on top.
Edited the position of the objects in the body:
(Header and footer fixed, the rest absolute).

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,13 @@
 </head>
 
 <body>
+
+  <!-- HEADER -->
+  <section class="header">
+    <img src="images/og_image.png" />
+  </section>
+  <!-- /HEADER-->
+
   <!-- MAIN -->
   <section id="main" style="display: none;">
     <h3>Thousands of Doctors and Nurses are giving their life today for you and me.</h2>
@@ -93,6 +100,10 @@
     </section>
     <!-- /THANK YOU-->
 
+    <!-- TOASTER -->
+    <div id="toaster" style="display: none"></div>
+    <!-- /TOASTER -->
+
     <!-- LOADING -->
     <section id="loader">
       <div style="background-color: transparent;" class="se-pre-con"></div>
@@ -101,12 +112,9 @@
 
     <!-- FOOTER -->
     <footer>
-      <img src="images/og_image.png" />
       <p><a href="mailto:m@claphelp.life">m@claphelp.life</a></p>
     </footer>
-    <!-- /FOOTER-->
-
-    <div id="toaster" style="display: none"></div>
+    <!-- /FOOTER -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
