--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
       <form id="contact-form">
         <label for="email">Leave us your email and we'll send you the information on how to help.</label>
         <br>
-        <input type="email" id="email" name="email" placeholder="example@example.com">
+        <input type="email" id="email" name="email" placeholder="iloveclapping@ireallydo.com">
         <input type="hidden" id="help-type" name="type">
         <input type="submit" id="submitButton" name="submit" class="button">
       </form>
