Solved bug of issue #37

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
     <section id="help" style="display: none;">
       <h3>More ways in which you can help!</h3>
-      <a class="button fullWidth js-link" href="#contact" data-value="0">Send an ecouragement message to the Doctors and Nurses in my area.</a>
+      <a class="button fullWidth js-link" href="#contact" data-value="0">Send an encouragement message to the Doctors and Nurses in my area.</a>
       <a class="button fullWidth js-link" href="#contact" data-value="1">Donate resources to the cause.</a>
       <a class="button fullWidth js-link" href="#contact" data-value="2">Help/Join the ClapHelp team.</a>
       <a style="opacity: 80%; color: #919191;" class="button share-btn">
