--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <h3>El mensaje del día:</h3>
         <p>"Gracias a los médicos que hoy están cuidando a mi abuelita." <br> Carolina, Colombia.</p>
       </div>
-      <a class="button js-link" href="#help" style="border-color: rgb(61, 61, 190);">Ways to HELP</a>
+      <a class="button js-link" href="#help" style="border-color: rgb(61, 61, 190);">Formas de ayudar</a>
       <a class="button share-btn" style="opacity: 80%; color: #919191;">
         <img class="clapImg icon" src="./images/78414723-1ba44d80-75e3-11ea-875b-3557a628596e.png" />
         Comparte el CLAP!
@@ -373,6 +373,7 @@
             <a class="button" id="cardButton" style="border-color: rgb(61, 61, 190);" href="https://vaki.co/vaki/JuntosSalimosAdelante?fbclid=IwAR0PmYg6RTfFT93z8JFH_LSIc2ID_BrDnmWuNLBjgYM4D803agefnL-Ulw8" target="_blank">Ir a la página</a>
           </div>
         </div>
+        <p>¿Conoces alguna otra iniciativa? Escríbenos a <a href="mailto:m@claphelp.life">m@claphelp.life</a></p>
     </section>
     <!-- /DONATE-->
 
