Dropdown menu added
The dropdown menu form was added. Functionality still [WIP].

--- a/public/index.html
+++ b/public/index.html
@@ -352,8 +352,14 @@
 
     <!-- DONATE-->
     <section id="donate" style="display: none;">
-      <h3>Acá hay iniciativas en tu área:</h3>
-        <div class="donateCard">
+      <h3>Estas son las iniciativas de:</h3>
+        <form style="width: 60%;">
+          <select type="" id="country" name="country" placeholder="Your Country" class="selectInput" required>
+            <option value="Afghanistan">Afghanistan</option>
+          </select>
+        </form>
+      </div>
+      <div class="donateCard">
           <div style="width: 30%;">
             <img class="cardImg icon" style="max-width: 100%; height: auto;" src="../public/images/download (1).png" />
           </div>
@@ -362,8 +368,8 @@
             <p class="cardText">Iniciativa de la asociación colombiana de cirugía para promover máscaras de protección para profesionales de la salúd.</p>
             <a class="button" id="cardButton" style="border-color: rgb(61, 61, 190);" href="https://www.unaplausounavida.org/" target="_blank" >Ir a la página</a>
           </div>
-        </div>
-        <div class="donateCard">
+      </div>
+      <div class="donateCard">
           <div style="width: 30%;">
             <img class="cardImg icon" style="max-width: 100%; height: auto;" src="../public/images/5b2d3e1c4f6cc144c23f7fc6_vaki.png" />
           </div>
@@ -372,8 +378,8 @@
             <p class="cardText">Iniciativa de la empresa de confección Spataro para confeccionar Kits de Vida para profesionales de la salúd.</p>
             <a class="button" id="cardButton" style="border-color: rgb(61, 61, 190);" href="https://vaki.co/vaki/JuntosSalimosAdelante?fbclid=IwAR0PmYg6RTfFT93z8JFH_LSIc2ID_BrDnmWuNLBjgYM4D803agefnL-Ulw8" target="_blank">Ir a la página</a>
           </div>
-        </div>
-        <p>¿Conoces alguna otra iniciativa? Escríbenos a <a href="mailto:m@claphelp.life">m@claphelp.life</a></p>
+      </div>
+      <p>¿Conoces alguna otra iniciativa? Escríbenos a <a href="mailto:m@claphelp.life">m@claphelp.life</a></p>
     </section>
     <!-- /DONATE-->
 
