--- a/public/index.html
+++ b/public/index.html
@@ -422,7 +422,7 @@
     <footer>
       <p><a href="mailto:m@claphelp.life">m@claphelp.life</a></p>
       <a href="https://github.com/mjimenezleon13/clapHelp" target="_blank">
-        <img class="icon" src="../public/images/_github-512.png"/>
+        <img style="margin: 10px;" class="icon" src="../public/images/_github-512.png"/>
       </a>
     </footer>
     <!-- /FOOTER -->
