Message Independent Section Added
[WIP] Message needs to connect to back end. 
Increasing numbers in #results not viewed due to this change. Need to correct so that this enhancement can be seen. ie The total number per country and worlwide have an effect where there's a counter that starts at 0 and reaches the final result in Xseconds.

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,16 @@
     </section>
     <!-- /MAIN -->
 
+    <!-- DAILYMESSAGE-->
+    <section id="dailymessage" style="display: none;">
+      <div>
+        <h3>El mensaje del día:</h3>
+        <p>"Gracias a los médicos que hoy están cuidando a mi abuelita." <br> Carolina, Colombia.</p>
+      </div>
+      <a class="button js-link" href="#results" data-value="1">Ver CLAPS!</a>
+    </section>
+    <!-- /DAILYMESSAGE-->
+
     <!-- RESULTS -->
     <section id="results" style="display: none;">
       <h3>Número total de Claps:</h3>
@@ -52,10 +62,6 @@
       <div class="flagDiv">
         <img class="flagDivImg" src="./images/world.png"/>
         <h3><span id="global_claps" class="counter"></span> en el Mundo</h3>
-      </div>
-      <div>
-        <h3>El mensaje del día:</h3>
-        <p>"Gracias a los médicos que hoy están cuidando a mi abuelita." <br> Carolina, Colombia.</p>
       </div>
       <a class="button js-link" href="#help" style="border-color: rgb(61, 61, 190);">Formas de ayudar</a>
       <a class="button share-btn" style="opacity: 80%; color: #919191;">
